--- a/public/css/style.css
+++ b/public/css/style.css
@@ -182,7 +182,7 @@ a:hover {
   font-size: 20px;
   padding-left: 10px;
   padding-right: 10px;
-  border: 2px solid #25262a;
+  /* border: 2px solid #25262a; */
   color: #000 !important;
 }
 
@@ -672,7 +672,7 @@ a:hover {
 
 .site-blocks-cover.inner-page, .site-blocks-cover.inner-page .row {
   min-height: 400px;
-  height: 500px;
+  height: auto;
 }
 
 .site-blocks-cover h2 {
