--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,7 +108,7 @@ a:hover {
 
 @media (min-width: 768px) {
   .site-section {
-    padding: 5em 0;
+    /* padding: 5em 0; */
   }
 }
 
@@ -832,7 +832,7 @@ a:hover {
 }
 
 .block-3 .owl-stage {
-  padding-top: 40px;
+  /* padding-top: 40px; */
   padding-bottom: 40px;
 }
 
@@ -1218,7 +1218,7 @@ a:hover {
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
-  width: 70px;
+  width: 100%;
   height: 4px;
   background: black;
   content: "";
@@ -1278,7 +1278,7 @@ a:hover {
 }
 
 .product-item.bg-gray {
-  background: #f9f9f9;
+  /* background: #f9f9f9; */
 }
 
 .product-item.sm-height {
@@ -1314,6 +1314,7 @@ a:hover {
   font-size: 18px;
   font-weight: normal;
   margin-bottom: 0;
+  text-align: center;
 }
 
 .item-entry .item-title a {
@@ -1327,6 +1328,8 @@ a:hover {
 .item-entry .item-price {
   color: #000;
   font-weight: bold;
+  text-align: center;
+  margin-bottom: 0;
 }
 
 .item-entry .item-price del {
