--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,10 @@ a:hover {
   text-decoration: none;
 }
 
+.img-fluid:hover {
+  opacity: 0.7;
+}
+
 .text-black {
   color: #000;
 }
@@ -1232,20 +1236,22 @@ a:hover {
 
 .product-item:hover .product-category {
   display: block;
-  background: black;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  top: 50%;
 }
 
 .product-item .product-category {
   position: absolute;
   display: inline-block;
   padding: 10px 30px;
-  /* background: #333333; */
+  background: #333333;
+  border-radius: 5px;
   color: #ccc;
   z-index: 8;
   top: 60%;
   opacity: 0.5;
-  border: 1px solid black;
-  border-radius: 10px;
   left: 50%;
   font-size: 20px;
   -webkit-transform: translate(-50%, -50%);
@@ -1256,6 +1262,9 @@ a:hover {
 
 .product-item .product-category span {
   color: #ced4da;
+  border: 1px solid black;
+  background-color: black;
+  border-radius: 5px;
 }
 
 .product-category:hover {
@@ -1318,12 +1327,12 @@ a:hover {
   text-align: center;
 }
 
-.item-entry .item-title a {
-  color: gray;
+.item-entry {
+  color: #000;
 }
 
-.item-entry .item-title a:hover {
-  color: #000;
+.item-entry:hover {
+  color: gray;
 }
 
 .item-entry .item-price {
@@ -1335,6 +1344,61 @@ a:hover {
 
 .item-entry .item-price del {
   color: #b3b3b3;
+}
+
+.trans {
+  transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -webkit-transition: all 1s ease;
+}
+
+.lightbox {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 999;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 80%;
+  position: relative;
+  top: -100%;
+  transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -webkit-transition: all 1s ease;
+}
+
+.lightbox:target {
+  outline: none;
+  top: 0;
+  opacity: 1;
+  pointer-events: auto;
+  transition: all 1.2s ease;
+  -moz-transition: all 1.2s ease;
+  -ms-transition: all 1.2s ease;
+  -o-transition: all 1.2s ease;
+  -webkit-transition: all 1.2s ease;
+}
+
+.lightbox:target img {
+  top: 0;
+  top: 55%;
+  transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 
 .custom-border-bottom {
