--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@ a:hover {
   visibility: visible;
 }
 
-.btn {
+.active, .btn {
   height: 43px;
   -webkit-transition: .3s all ease-in-out;
   -o-transition: .3s all ease-in-out;
@@ -77,7 +77,7 @@ a:hover {
   font-size: 13px;
 }
 
-.btn:hover, .btn:active, .btn:focus {
+.active, .btn:hover, .btn:active, .btn:focus {
   outline: none;
   -webkit-box-shadow: none;
   box-shadow: none;
