--- a/public/assets/libs/css/style.css
+++ b/public/assets/libs/css/style.css
@@ -154,7 +154,7 @@
    ========================================================================== */
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Robot, sans-serif;
 }
 
 body {
@@ -169,7 +169,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     color: black;
     margin: 0px 0px 15px 0px;
-    /* font-family: 'Roboto'; */
+    font-family: 'Roboto';
 }
 
 h1 {
